# StoffelVM

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  adkg_cargo_test.txt  docker-compose.avss.yml  docker-compose.coordinator.reserve-index.preproc.yml  docker-compose.coordinator.reserve-index.yml  docker-compose.nat.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: vm_benchmarks.rs
crates/benches/: performance_benchmark.rs  vm_benchmarks.rs
crates/stoffel-vm/: .swp  Cargo.toml
crates/stoffel-vm-types/: Cargo.toml
crates/stoffel-vm-types/examples/: generate_client_mul_program.rs  generate_client_sub_order_program.rs
crates/stoffel-vm-types/src/: activations.rs  compiled_binary.rs  core_types.rs  functions.rs  instructions.rs  lib.rs  registers.rs
crates/stoffel-vm/src/: cffi.rs  core_vm.rs  error.rs  foreign_functions.rs  lib.rs  mpc_builtins.rs  program.rs  runtime_hooks.rs  runtime_instruction.rs  runtime_value_ops.rs  standard_library.rs  vm_function_helper.rs  vm_state.rs  wasm.rs
crates/stoffel-vm/src/core_vm/: effect_scheduler.rs  execution.rs  tests.rs
crates/stoffel-vm/src/foreign_functions/: arguments.rs  context.rs  services.rs  table_memory.rs
crates/stoffel-vm/src/net/: adkg_engine.rs  adkg_server.rs  avss_engine.rs  avss_server.rs  backend.rs  client_store.rs  curve.rs  discovery.rs  hb_engine.rs  hb_server.rs  local_cluster.rs  mod.rs  mpc.rs  mpc_engine.rs  mpc_runner.rs  open_registry.rs  p2p.rs  program_sync.rs  reservation.rs  reveal_batcher.rs  session.rs
crates/stoffel-vm/src/net/mpc/: avss.rs  helpers.rs
crates/stoffel-vm/src/net/mpc/avss/: preprocessing.rs  session_ids.rs  tests.rs
crates/stoffel-vm/src/net/mpc/honeybadger/: preprocessing.rs  reservation.rs  tests.rs
crates/stoffel-vm/src/runtime_value_ops/: arithmetic.rs  bitwise.rs  compare.rs  tests.rs
crates/stoffel-vm/src/storage/: mod.rs  preproc.rs
crates/stoffel-vm/src/tests/: adkg_integration.rs  avss_e2e_integration.rs  avss_integration.rs  avss_keygen_program.rs  bytecode_multiplication.rs  dkg_primitives.rs  ed25519_compat.rs  leader_bootnode_integration.rs  mod.rs  mpc_multiplication_integration.rs  p2p_integration.rs  test_utils.rs  threshold_signatures.rs  vm_mesh_hbclient_integration.rs  vm_mesh_integration.rs  vm_mpc_integration.rs
crates/stoffel-vm/src/tests/binaries/: avss_keygen.stflb  client_mul.stflb  client_sub_order.stflb  matrix_average_fixed_point.stflb
crates/stoffel-vm/src/vm_state/: calls.rs  effect.rs  execution.rs  frame.rs  hooks.rs  instructions.rs  mpc_operation.rs  mpc_runtime.rs  program_registry.rs  register_access.rs  tests.rs
docker/: cargo-coordinator-source-patch.toml  coordinator.Dockerfile  entrypoint.sh  prepare-coordinator-source.sh  test-coordinator-preproc-store.sh  test-coordinator-reserve-index.sh
docker/coordinator-wrapper/: Cargo.toml
docker/coordinator-wrapper/src/: main.rs
docker/patches/: stoffel-mpc-coordinator-subscription-disconnects.patch
dont look pls/src.old/: handlers.rs  lib.rs  vm.rs  vm2.rs
dont look pls/src.old/operations/src/: lib.rs  opcodes.rs
dont look pls/src.old/tests/: function_tests.rs  mod.rs  vm_tests.rs
examples/: calculator.rs  debugging.rs  hello_world.rs  mpc_client_mul.rs
include/: README.md  stoffel_vm.h
src/: activations.rs  activationshenanigans.rs  bigbirtha.rs  compiled_binary.rs  core_types.rs  core_vm.rs  functions.rs  handlers.rs  hooks.rs  instructions.rs  lib.rs  mpc.rs  mutex_helpers.rs  runtime_hooks.rs  vm.rs  vm_function_helper.rs  vm_state.rs  vmstate.rs
src/net/: light_udp.rs  mod.rs  p2p.rs
src/operations/: Cargo.toml
src/operations/src/: lib.rs  opcodes.rs
src/storage/: local.rs  mod.rs  replicated.rs
src/tests/: vm_tests.rs
tests/: p2p_integration.rs
