[package]
name = "stoffel-vm"
authors = ["Gabriel Arrouye"]
version = "0.1.0"
edition = "2021"

[dependencies]
stoffelmpc-mpc =  { version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", branch = "randousha"}
stoffelmpc-common =  { version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", branch = "randousha"}
stoffelmpc-network =  { version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", branch = "randousha"}

async-trait = "0.1"
redb = "2.1.0"
tokio = { version = "1.44.2", features = ["full"] }
quinn = { version = "0.11.8", features = ["default", "rustls", "ring"] }
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = "0.12"
bytes = "1.5"
rand = "0.9.0"
object-pool = "0.6.0"
rustc-hash = "2.1.1"
smallvec = "1.11"
parking_lot = "0.12"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
ark-ff = "0.5.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vm_benchmarks"
harness = false
