[package]
name = "stoffel-vm-types"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "2.1.1"
smallvec = "1.11"
parking_lot = "0.12"
object-pool = "0.6.0"
stoffelmpc-mpc = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", rev = "82a60d1e2c3382013214d9165a906b781490bcde" }
