[package]
name = "stoffel-vm"
authors = ["Gabriel Arrouye"]
version = "0.1.0"
edition = "2021"

# Build as both a Rust library and a C-compatible dynamic library
[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["mpc"]
# Full MPC networking support - required for multi-party computation
mpc = [
    "stoffelmpc-mpc",
    "stoffelnet",
    "async-trait",
    "tokio",
    "quinn",
    "rustls",
    "rustls-pemfile",
    "rcgen",
    "futures",
    "tracing-subscriber",
    "redb",
    "dirs",
    "dashmap",
]
# WebAssembly support - sync-only execution, no networking
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "console_error_panic_hook"]
# Integration test flag
hb_itest = ["mpc"]

[dependencies]
stoffel-vm-types = { version = "0.1.0", path = "../stoffel-vm-types" }

# Core dependencies (always required)
libc = "0.2"
bytes = "1.5"
rand = "0.9.0"
object-pool = "0.6.0"
rustc-hash = "2.1.1"
smallvec = "1.11"
parking_lot = "0.12"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive", "default"] }
ark-ff = "0.5.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tracing = "0.1.41"
ark-std = { version = "0.5.0", features = ["getrandom"] }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0", features = ["ark-serialize-derive"] }
bincode = { version = "1.3.3", default-features = true }
blake3 = "1.5.4"
hex = "0.4"

# MPC/Networking dependencies (optional, behind 'mpc' feature)
stoffelmpc-mpc = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", branch = "main", optional = true }
stoffelnet = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/stoffel-networking.git", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
quinn = { version = "0.11.8", features = ["default", "rustls", "ring"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
rcgen = { version = "0.14.2", optional = true }
futures = { version = "0.3.31", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
redb = { version = "2.1.0", optional = true }
dirs = { version = "5", optional = true }
dashmap = { version = "5", optional = true }

# WASM dependencies (optional, behind 'wasm' feature)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "vm_benchmarks"
path = "crates/benches"
harness = false
