[package]
name = "stoffel-coordinator-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5.0"
clap = { version = "4.5.56", features = ["derive"] }
hex = "0.4.3"
rustls = "0.23.36"
stoffel-mpc-coordinator = { path = "../stoffel-mpc-coordinator" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
x509-parser = "0.18.1"
